# Chess-Engine-Arena

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  vcpkg.json
scripts/: setup.ps1  setup.sh
src/: CMakeLists.txt  ConfigPage.cpp  ConfigPage.h  Engine.cpp  Engine.h  GameManager.cpp  GameManager.h  Main.cpp  MainWindow.cpp  MainWindow.h  OutputManager.cpp  OutputManager.h  Styles.cpp  Styles.h  TournamentManager.cpp  TournamentManager.h  TournamentPage.cpp  TournamentPage.h  Types.h
